<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_100"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_talle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_layouts_info"
        android:textColor="@color/md_cyan_700"
        android:layout_margin="15dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cont_Operaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/md_blue_A700"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963"
        android:text="Cont"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/examples_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
            android:id="@+id/funciones_conteiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <Button
                android:id="@+id/boton_fibonacci"
                android:backgroundTint="@color/md_grey_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fibonacci_layout_label" />

            <EditText
                android:id="@+id/text_posiciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/posiciones_layout_label"
                android:inputType="number"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/boton_relative_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/boton_linear_layout" />

            <Button
                android:id="@+id/boton_factorial"
                android:backgroundTint="@color/md_grey_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/factorial_layout_label" />

            <Spinner
                android:id="@+id/spinner_number"
                android:text="@string/number_layout_label"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"


                app:layout_constraintTop_toBottomOf="@+id/boton_linear_layout"
                />

            <Button
                android:id="@+id/boton_paises"
                android:backgroundTint="@color/md_grey_400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paises_layout_label" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>